# SearchEngine

./: .gitignore  CMakeLists.txt  DSHash.h  DSString.cpp  DSString.h  DSTree.h  DSVector.h  DocumentParser.cpp  DocumentParser.h  Index.cpp  Index.h  Paper.cpp  Paper.h  QueryEngine.cpp  QueryEngine.h  README.md  list.h  main.cpp
